Fix Cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ project ("EN.605.604.SU23")
 
 # Include sub-projects.
 add_subdirectory ("EN.605.604.SU23_Assignment1")
-add_subdirectory ("EN.605.604.SU23_Assignment2")
+add_subdirectory ("EN.605.604.SU23_Assignment2_P1")
+add_subdirectory ("EN.605.604.SU23_Assignment2_P2")
 add_subdirectory ("EN.605.604.SU23_Assignment3")
 add_subdirectory ("EN.605.604.SU23_Assignment4")
 add_subdirectory ("EN.605.604.SU23_Assignment5")
