Unpolished draft completed for project 1.

--- a/EN.605.604.SU23_Project1/CMakeLists.txt
+++ b/EN.605.604.SU23_Project1/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (EN.605.604.SU23_Project1 "EN.605.604.SU23_Project1.cpp" "Merchandise.h" "Merchandise.cpp" "Configurations.h")
+add_executable (EN.605.604.SU23_Project1 "EN.605.604.SU23_Project1.cpp" "Drink.h" "Drink.cpp" "Configurations.h" "CommandLineUserInterface.cpp" "CommandLineUserInterface.h" "DrinkStorage.cpp" "DrinkStorage.h" "VendingMachine.cpp" "VendingMachine.h"   "DispensingColumnStorage.cpp" "DispensingColumnStorage.h" "SelectionButton.cpp" "SelectionButton.h" "DevUtil.h" "MoneyStorage.cpp" "MoneyStorage.h" "MainMoneyStorage.cpp" "MainMoneyStorage.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET EN.605.604.SU23_Project1 PROPERTY CXX_STANDARD 20)
