--- a/EN.605.604.SU23_Project2/CMakeLists.txt
+++ b/EN.605.604.SU23_Project2/CMakeLists.txt
@@ -1,9 +1,9 @@
-﻿# CMakeList.txt : CMake project for EN.605.604.SU23_Project2, include source and define
+# CMakeList.txt : CMake project for EN.605.604.SU23_Project2, include source and define
 # project specific logic here.
 #
 
 # Add source to this project's executable.
-add_executable (EN.605.604.SU23_Project2 "EN.605.604.SU23_Project2.cpp")
+add_executable (EN.605.604.SU23_Project2 "EN.605.604.SU23_Project2.cpp" "Passenger.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET EN.605.604.SU23_Project2 PROPERTY CXX_STANDARD 20)
