--- a/EN.605.604.SU23_Project2/CMakeLists.txt
+++ b/EN.605.604.SU23_Project2/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (EN.605.604.SU23_Project2 "EN.605.604.SU23_Project2.cpp" "Passenger.h")
+add_executable (EN.605.604.SU23_Project2 "EN.605.604.SU23_Project2.cpp" "DevUtil.h" "Passenger.h" "Passenger.cpp" "PassengerCheckPointListener.cpp" "PassengerCheckPointListener.h" "RandomEventTimeGenerator.cpp" "RandomEventTimeGenerator.h" "Publisher.cpp" "Publisher.h" "Listener.h" "SimulatedTimePublisher.cpp" "SimulatedTimePublisher.h" "AirportSecuritySystemSimulator.cpp" "AirportSecuritySystemSimulator.h" "ProcessInfoListener.cpp" "ProcessInfoListener.h" "Record.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET EN.605.604.SU23_Project2 PROPERTY CXX_STANDARD 20)
