--- a/EN.605.604.SU23_Assignment3/CMakeLists.txt
+++ b/EN.605.604.SU23_Assignment3/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (EN.605.604.SU23_Assignment3 "EN.605.604.SU23_Assignment3.cpp")
+add_executable (EN.605.604.SU23_Assignment3 "EN.605.604.SU23_Assignment3.cpp" "Date.cpp" "Date.h" "Array.cpp" "Array.h" "DevUtil.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET EN.605.604.SU23_Assignment3 PROPERTY CXX_STANDARD 20)
