--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ add_subdirectory ("EN.605.604.SU23_Assignment1")
 add_subdirectory ("EN.605.604.SU23_Assignment2_P1")
 add_subdirectory ("EN.605.604.SU23_Assignment2_P2")
 add_subdirectory ("EN.605.604.SU23_Assignment3")
-add_subdirectory ("EN.605.604.SU23_Assignment4")
+add_subdirectory ("EN.605.604.SU23_Assignment4_P1")
+add_subdirectory ("EN.605.604.SU23_Assignment4_P2")
 add_subdirectory ("EN.605.604.SU23_Assignment5")
 add_subdirectory ("EN.605.604.SU23_Project1")
 add_subdirectory ("EN.605.604.SU23_Project2")
