--- a/EN.605.604.SU23_Assignment5_P1/CMakeLists.txt
+++ b/EN.605.604.SU23_Assignment5_P1/CMakeLists.txt
@@ -3,10 +3,10 @@
 #
 
 # Add source to this project's executable.
-add_executable (EN.605.604.SU23_Assignment5 "EN.605.604.SU23_Assignment5.cpp")
+add_executable (EN.605.604.SU23_Assignment5_P1 "EN.605.604.SU23_Assignment5_P1.cpp" "Song.h" "Song.cpp" "DevUtil.h" "UserInterface.cpp" "UserInterface.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET EN.605.604.SU23_Assignment5 PROPERTY CXX_STANDARD 20)
+  set_property(TARGET EN.605.604.SU23_Assignment5_P1 PROPERTY CXX_STANDARD 20)
 endif()
 
 # TODO: Add tests and install targets if needed.
